syntax = "proto3";

package dev.galdin.scale;

enum FoodBetweenMeals {
    Always,
    Frequently,
    Sometimes,
    Never
}
