syntax = "proto3";

package dev.galdin.scale;

enum ObesityLevel {
    INSUFFICIENT_WEIGHT = 0;
    NORMAL_WEIGHT       = 1;
    OVERWEIGHT_LEVEL_1  = 2;
    OVERWEIGHT_LEVEL_2  = 3;
    OBESITY_TYPE_1      = 4;
    OBESITY_TYPE_2      = 5;
    OBESITY_TYPE_3      = 6;
}
